bat.bool1.posneg.PosNeg.scala.error
Compilation error:
PosNeg:2: error: '(' expected but identifier found.
  if a*b < 0
     ^